[gd_scene load_steps=26 format=2]

[ext_resource path="res://manager/interface/InterfaceIntroManager.gd" type="Script" id=1]
[ext_resource path="res://interface/norse/img/background-black.png" type="Texture" id=2]
[ext_resource path="res://interface/norse/tile/TilesHUB.tres" type="TileSet" id=3]
[ext_resource path="res://unit/norse/hero/sigurd/img/walk/Hero_Sword_Walk_05.png" type="Texture" id=4]
[ext_resource path="res://unit/norse/hero/sigurd/img/walk/Hero_Sword_Walk_06.png" type="Texture" id=5]
[ext_resource path="res://unit/norse/hero/sigurd/img/walk/Hero_Sword_Walk_07.png" type="Texture" id=6]
[ext_resource path="res://unit/norse/hero/sigurd/img/walk/Hero_Sword_Walk_08.png" type="Texture" id=7]
[ext_resource path="res://unit/norse/hero/sigurd/img/walk/Hero_Sword_Walk_09.png" type="Texture" id=8]
[ext_resource path="res://unit/norse/hero/sigurd/img/attack/Hero_Sword_Attack_17.png" type="Texture" id=9]
[ext_resource path="res://unit/norse/hero/sigurd/img/attack/Hero_Sword_Attack_18.png" type="Texture" id=10]
[ext_resource path="res://unit/norse/hero/sigurd/img/attack/Hero_Sword_Attack_16.png" type="Texture" id=11]
[ext_resource path="res://deck/norse/img/Rune_18.png" type="Texture" id=12]
[ext_resource path="res://deck/norse/img/Rune_15.png" type="Texture" id=13]
[ext_resource path="res://deck/norse/img/Rune_00.png" type="Texture" id=14]
[ext_resource path="res://deck/norse/img/Rune_08.png" type="Texture" id=15]
[ext_resource path="res://deck/norse/img/Rune_11.png" type="Texture" id=16]
[ext_resource path="res://deck/norse/img/Rune_12.png" type="Texture" id=17]
[ext_resource path="res://deck/norse/img/Rune_01.png" type="Texture" id=18]
[ext_resource path="res://deck/norse/img/Rune_04.png" type="Texture" id=19]
[ext_resource path="res://deck/norse/img/Rune_06.png" type="Texture" id=20]
[ext_resource path="res://deck/norse/img/Rune_22.png" type="Texture" id=21]
[ext_resource path="res://interface/norse/font/Norsebold.otf" type="DynamicFontData" id=22]
[ext_resource path="res://sound/Intro - Der Hvor Egen Gror.ogg" type="AudioStream" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 5
outline_color = Color( 0.168627, 0.168627, 0.168627, 1 )
font_data = ExtResource( 22 )

[node name="IntroInterface" type="Node2D"]
script = ExtResource( 1 )

[node name="Layer 0 - Background" type="CanvasLayer" parent="."]
layer = -3

[node name="TextureRect" type="TextureRect" parent="Layer 0 - Background"]
margin_top = -5.0
margin_right = 1026.0
margin_bottom = 606.0
texture = ExtResource( 2 )
expand = true

[node name="Layer 1 - Border" type="CanvasLayer" parent="."]
layer = -2

[node name="TileMap" type="TileMap" parent="Layer 1 - Border"]
visible = false
position = Vector2( 10, 5 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 84, 84 )
format = 1
tile_data = PoolIntArray( 0, -1073741821, 0, 1, -1073741820, 0, 2, -1073741820, 0, 3, -1073741820, 0, 4, -1073741820, 0, 5, -1073741820, 0, 6, -1073741820, 0, 7, -1073741820, 0, 8, -1073741820, 0, 9, -1073741820, 0, 10, -1073741820, 0, 11, 3, 0, 65536, 1610612740, 0, 65547, 4, 0, 131072, 1610612740, 0, 131083, 4, 0, 196608, 1610612740, 0, 196619, 4, 0, 262144, 1610612740, 0, 262155, 4, 0, 327680, 1610612740, 0, 327691, 4, 0, 393216, 1610612739, 0, 393217, -1610612732, 0, 393218, -1610612732, 0, 393219, -1610612732, 0, 393220, -1610612732, 0, 393221, -1610612732, 0, 393222, -1610612732, 0, 393223, -1610612732, 0, 393224, -1610612732, 0, 393225, -1610612732, 0, 393226, -1610612732, 0, 393227, -1610612733, 0 )

[node name="Layer 2 - GUI" type="CanvasLayer" parent="."]

[node name="Hero" type="AnimatedSprite" parent="Layer 2 - GUI"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 512, 225 )
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "walk"
speed_scale = 0.6

[node name="Rune_1" type="Sprite" parent="Layer 2 - GUI"]
position = Vector2( 550, -100 )
rotation = 0.244278
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 12 )

[node name="Rune_2" type="Sprite" parent="Layer 2 - GUI"]
position = Vector2( 318, -142 )
rotation = 0.84794
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 13 )

[node name="Rune_3" type="Sprite" parent="Layer 2 - GUI"]
position = Vector2( 636, -418 )
rotation = 0.584494
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 14 )

[node name="Rune_4" type="Sprite" parent="Layer 2 - GUI"]
position = Vector2( 209, -391 )
rotation = -0.398391
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 15 )

[node name="Rune_5" type="Sprite" parent="Layer 2 - GUI"]
position = Vector2( 695, -118 )
rotation = -0.138491
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 16 )

[node name="Rune_6" type="Sprite" parent="Layer 2 - GUI"]
position = Vector2( 256, -622 )
rotation = 0.84794
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 17 )

[node name="Rune_7" type="Sprite" parent="Layer 2 - GUI"]
position = Vector2( 823, -151 )
rotation = -0.624645
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 18 )

[node name="Rune_8" type="Sprite" parent="Layer 2 - GUI"]
position = Vector2( 120, -151 )
rotation = 2.45579
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 19 )

[node name="Rune_10" type="Sprite" parent="Layer 2 - GUI"]
position = Vector2( 37, -368 )
rotation = 2.66354
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 20 )

[node name="Rune_9" type="Sprite" parent="Layer 2 - GUI"]
position = Vector2( 1003, -191 )
rotation = 0.261799
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 21 )

[node name="Label" type="Label" parent="Layer 2 - GUI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -78.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.964706, 0.964706, 1 )
text = "KEY_INTRO_INDEX_0"
align = 1

[node name="TweenRune1" type="Tween" parent="."]

[node name="TweenRune2" type="Tween" parent="."]

[node name="TweenRune3" type="Tween" parent="."]

[node name="TweenRune4" type="Tween" parent="."]

[node name="TweenRune5" type="Tween" parent="."]

[node name="TweenLabel" type="Tween" parent="."]

[node name="TweenAvatar" type="Tween" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
autoplay = true
mix_target = 2
[connection signal="tween_completed" from="TweenRune1" to="." method="_on_TweenRune1_tween_completed"]
[connection signal="tween_completed" from="TweenRune2" to="." method="_on_TweenRune2_tween_completed"]
[connection signal="tween_completed" from="TweenRune3" to="." method="_on_TweenRune3_tween_completed"]
[connection signal="tween_completed" from="TweenRune4" to="." method="_on_TweenRune4_tween_completed"]
[connection signal="tween_completed" from="TweenRune5" to="." method="_on_TweenRune5_tween_completed"]
[connection signal="tween_completed" from="TweenLabel" to="." method="_on_TweenLabel_tween_completed"]
